# NUTRI-CHECK

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/nutri_app/: __init__.py  database.py
src/nutri_app/forms/: agua_forms.py  alimentos_forms.py  auth_forms.py  perfil_forms.py  produtos_forms.py  progressao_forms.py  refeicoes_forms.py
src/nutri_app/routes/: agua_routes.py  alimentos_ajax.py  alimentos_routes.py  auth_routes.py  dashboard_routes.py  home_routes.py  login_routes.py  perfil_ajax.py  perfil_routes.py  produtos_routes.py  progressao_routes.py  refeicoes_ajax.py  refeicoes_routes.py
src/nutri_app/static/css/: base.css  bg-image.css  components.css  layout.css  utils.css
src/nutri_app/static/js/: agua.js  alimentos.js  barcode.js  login.js  perfil.js  progressao_peso.js  refeicoes.js
src/nutri_app/templates/: cadastro.html  home.html
src/nutri_app/templates/emails/: body_email.html
src/nutri_app/templates/includes/: alimentos.html  cadastro.html  card_progressao.html  flash_messages.html  footer.html  grafico-peso_progressao.html  login.html  navbar.html  perfil.html  progressao.html  refeicoes.html
src/nutri_app/templates/modals/: alimento_form_modal.html  editar_agua_modal.html  editar_refeicao_modal.html  modal_adicionar_alimento.html  modal_editar_agua.html  modal_editar_progressao.html  (+5 more)
src/nutri_app/utils/: api_openfoodfacts.py  calorias_macros.py  decorators.py  email_service.py  grafico_progressao.py  hash.py  importar_alimentos.py  macros.py  preload_alimentos.py  progressao_peso.py  static_utils.py  user_login.py
(+18 files in other folders)
