[tool.poetry]
name = "nutri-app"
version = "0.1.0"
description = ""
authors = ["Vinícius Pinto Gonçalves <vinip8372@gmail.com>"]
readme = "README.md"
packages = [{ include = "nutri_app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
bcrypt = ">=4.3.0,<5.0.0"
pandas = ">=2.3.0,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
numpy = ">=2.3.1,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
flask = "^3.0.0"
flask_sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

